force-app/main/default/objects/Pack__c/Pack__c.object-meta.xml
<CustomObject>
    <label>Pack</label>
    <nameField>
        <displayFormat>P-{000000000}</displayFormat>
        <label>Pack No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>