force-app/main/default/objects/Pack__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Packs</relationshipLabel>
    <relationshipName>Packs</relationshipName>
    <type>Lookup</type>
</CustomField>