force-app/main/default/objects/Pack__c/fields/Class_Packing_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Packing_Date__c</fullName>
    <formula>Class__r.Warehouse_Packing_Date__c</formula>
    <inlineHelpText>From the Class</inlineHelpText>
    <label>Class Packing Date</label>
    <type>Date</type>
</CustomField>