force-app/main/default/objects/Pack__c/fields/Class_Status__c.field-meta.xml
<CustomField>
    <fullName>Class_Status__c</fullName>
    <formula>TEXT(Class__r.Status)</formula>
    <label>Class Status</label>
    <type>Text</type>
</CustomField>