force-app/main/default/objects/Pack__c/fields/Created_After_Packing_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_After_Packing_Date__c</fullName>
    <formula>IF(DATEVALUE(CreatedDate) &gt;= Class__r.Warehouse_Packing_Date__c ,TRUE, FALSE)</formula>
    <label>Created After Packing Date</label>
    <type>Checkbox</type>
</CustomField>