force-app/main/default/objects/Pack__c/fields/Facilitator__c.field-meta.xml
<CustomField>
    <fullName>Facilitator__c</fullName>
    <formula>Class__r.Tutor__r.FirstName &amp; &quot; &quot; &amp;  Class__r.Tutor__r.LastName</formula>
    <label>Facilitator</label>
    <type>Text</type>
</CustomField>