force-app/main/default/objects/Pack__c/fields/No_Packs_Requested__c.field-meta.xml
<CustomField>
    <fullName>No_Packs_Requested__c</fullName>
    <formula>Contact__r.No_of_Packs_Requested__c</formula>
    <label>No Packs (Requested)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>