force-app/main/default/objects/Pack__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Skincare</fullName>
            </value>
            <value>
                <fullName>Brows</fullName>
            </value>
            <value>
                <fullName>Hair</fullName>
            </value>
            <value>
                <fullName>Hand and Nailcare</fullName>
            </value>
            <value>
                <fullName>Men</fullName>
            </value>
            <value>
                <fullName>Confidence Kit</fullName>
            </value>
            <value>
                <fullName>Xmas Gift</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>