force-app/main/default/objects/Pack__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Dispatched_Date__c</columns>
    <columns>Class__c</columns>
    <columns>Facilitator__c</columns>
    <columns>Class_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>