force-app/main/default/objects/Pack__c/listViews/Status_Not_Dispatched_Multi.listView-meta.xml
<ListView>
    <fullName>Status_Not_Dispatched_Multi</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>No_Packs_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Dispatched_Date__c</columns>
    <columns>Class__c</columns>
    <columns>Class_Packing_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_After_Packing_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Dispatched</value>
    </filters>
    <filters>
        <field>No_Packs_Requested__c</field>
        <operation>greaterThan</operation>
        <value>1</value>
    </filters>
    <label>Not Dispatched Multi</label>
</ListView>