force-app/main/default/objects/Pack__c/listViews/Status_Not_Dispatched_to_Action.listView-meta.xml
<ListView>
    <fullName>Status_Not_Dispatched_to_Action</fullName>
    <booleanFilter>1 AND (2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>No_Packs_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Dispatched_Date__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Class__c</columns>
    <columns>Facilitator__c</columns>
    <columns>Class_Packing_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_After_Packing_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Dispatched_Date__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>Class_Packing_Date__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:14</value>
    </filters>
    <filters>
        <field>Class_Packing_Date__c</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:7</value>
    </filters>
    <label>Not Dispatched to Action</label>
</ListView>