force-app/main/default/objects/Pack__c/listViews/Status_NotDispatched_Created_Aft_Pack.listView-meta.xml
<ListView>
    <fullName>Status_NotDispatched_Created_Aft_Pack</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>No_Packs_Requested__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>Dispatched_Date__c</columns>
    <columns>Class__c</columns>
    <columns>Class_Packing_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Created_After_Packing_Date__c</columns>
    <columns>Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Verification</value>
    </filters>
    <label>Verification - Created Aft Pack</label>
</ListView>